--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,15 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
+# Flutter
+frontend/.dart_tool/
+frontend/.idea/
+frontend/.packages
+frontend/build/
+frontend/ios/Flutter/Flutter.framework
+frontend/pubspec.lock
+
+# Node.js
+backend/node_modules/
+backend/.env
+
+# OS
 .DS_Store
-.atom/
-.buildlog/
-.history
-.svn/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
-
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+Thumbs.db
